--- a/src/europe/3_aggregate.Rmd
+++ b/src/europe/3_aggregate.Rmd
@@ -309,7 +309,7 @@ taxa_species_eu <-
   map(~.x[["data"]]) %>%
   
   # Select columns of interest
-  map(~select(.x, speciesKey, scientificName, rank, taxonomicStatus)) %>%
+  map(~select(.x, speciesKey, scientificName, rank, taxonomicStatus, kingdom)) %>%
   
   # Merge all taxa in a data.frame
   reduce(full_join) %>%
@@ -324,7 +324,8 @@ taxa_species_eu <-
   group_by(speciesKey, 
            species_scientificName,
            rank,
-           taxonomicStatus) %>%
+           taxonomicStatus,
+           kingdom) %>%
   
   # create 'includes' column
   summarize(includes = paste(
@@ -496,7 +497,7 @@ if (ncol(taxa_subspecies_eu) > 0) {
   taxa_subspecies_eu %>%
   
   # select columns of interest
-  select(acceptedKey, accepted_scientificName, rank, taxonomicStatus) %>%
+  select(acceptedKey, accepted_scientificName, rank, taxonomicStatus, kingdom) %>%
 
   # add columns to original df
   right_join(occ_cube_eu_subspecies_taxa, 
@@ -506,7 +507,8 @@ if (ncol(taxa_subspecies_eu) > 0) {
   group_by(acceptedKey, 
            accepted_scientificName,
            rank,
-           taxonomicStatus) %>%
+           taxonomicStatus,
+           kingdom) %>%
   
   # create 'includes' column
   summarize(includes = paste(
@@ -606,7 +608,7 @@ taxa_synonym_eu <-
   map(~.x[["data"]]) %>%
   
   # select columns of interest
-  map(~select(.x, key, scientificName, rank, taxonomicStatus)) %>%
+  map(~select(.x, key, scientificName, rank, taxonomicStatus, kingdom)) %>%
   
   # Merge all taxa in a data.frame
   reduce(full_join) %>% 
