--- a/src/europe/2_assign_grid.Rmd
+++ b/src/europe/2_assign_grid.Rmd
@@ -332,7 +332,7 @@ If yes, remove occurrences with `occurrenceStatus` equal to one of `occurrenceSt
 
 ```{r remove_occurrenceStatus_to_discard_occs_eu}
 if (any(
-  occurrenceStatus_to_discard %in% occurrenceStatus$occurrenceStatus)) {
+  occurrenceStatus_to_discard %in% str_to_lower(occurrenceStatus$occurrenceStatus))) {
   occ_eu <- 
     occ_eu %>%
     filter(!str_to_lower(occurrenceStatus) %in% occurrenceStatus_to_discard)
