--- a/src/belgium/2_create_db.Rmd
+++ b/src/belgium/2_create_db.Rmd
@@ -288,8 +288,11 @@ We won't take into account unverified observations neither:
 identificationVerificationStatus_to_discard <- c(
   "unverified",
   "unvalidated",
+  "not validated",
+  "under validation",
   "not able to validate",
   "control could not be conclusive due to insufficient knowledge",
+  "uncertain",
   "unconfirmed",
   "unconfirmed - not reviewed",
   "validation requested"
