Convert uncertainty to double

--- a/src/belgium/3_assign_grid.Rmd
+++ b/src/belgium/3_assign_grid.Rmd
@@ -64,7 +64,8 @@ query <- glue_sql("SELECT {`cols`*} FROM {table}",
 )
 geodata_df <- 
   dbGetQuery(sqlite_occ, query) %>%
-  as_tibble()
+  dplyr::as_tibble() %>%
+  dplyr::mutate(coordinateUncertaintyInMeters = as.double(.data$coordinateUncertaintyInMeters))
 ```
 
 Number of occurrences:
