Use <- instead of = for var assignment

--- a/src/belgium/4_aggregate.Rmd
+++ b/src/belgium/4_aggregate.Rmd
@@ -118,7 +118,7 @@ class_df <-
     .data$classKey, 
     function(x) {
       if (!is.na(x)) {
-        taxon = name_usage(x)
+        taxon <- name_usage(x)
         taxon$data %>% pull(scientificName)
       } else {
         NA_character_
