Update gropuing to take into account family

--- a/src/belgium/4_aggregate.Rmd
+++ b/src/belgium/4_aggregate.Rmd
@@ -150,16 +150,16 @@ alien_taxa %>%
   count()
 ```
 
-## Aggregate occurrences for accepted alien species and genera
+## Aggregate occurrences for accepted alien species, genera and families
 
 ### Aggregate occurrences
 
-As initial step, we start by selecting occurrences linked to taxa with rank `SPECIES` or `GENUS` and taxonomic status `ACCEPTED` and `DOUBTFUL`:
+As initial step, we start by selecting occurrences linked to taxa with rank `SPECIES`, `GENUS` or `FAMILY` and taxonomic status `ACCEPTED` and `DOUBTFUL`:
 
 ```{r alien_taxa_species}
 alien_taxa_species <- 
   alien_taxa %>%
-  filter(rank %in% c("SPECIES", "GENUS"), 
+  filter(rank %in% c("SPECIES", "GENUS", "FAMILY"), 
          taxonomicStatus %in% c("ACCEPTED", "DOUBTFUL"))
 ```
 
@@ -169,7 +169,7 @@ Preview:
 alien_taxa_species %>% head()
 ```
 
-The `nubKey` of these taxa are the `speciesKey` or `genusKey` we can filter on:
+The `nubKey` of these taxa are the `speciesKey`, `genusKey` or `familyKey` we can filter on:
 
 ```{r get_alien_taxa_species_key}
 alien_taxa_species_key <-
@@ -178,12 +178,12 @@ alien_taxa_species_key <-
   pull(nubKey)
 ```
 
-Species, synonyms of that species and infraspecific taxa of that species all share the same `speciesKey`.
+Species, synonyms of that species and infraspecific taxa of that species all share the same `speciesKey`/`genusKey`/`familyKey`.
 
-For speeding up the aggregation, we create an index on  `year`,  `eea_cell_code`, `speciesKey` and `genusKey` if not present:
+For speeding up the aggregation, we create an index on `year`,  `eea_cell_code`, `speciesKey`, `genusKey`, `familyKey` and `coordinateUncertaintyInMeters` if not present:
 
 ```{r create_idx_speciesKey}
-idx_species_year_cell <- "idx_species_genus_year_cell"
+idx_species_year_cell <- "idx_species_genus_family_year_cell"
 # get indexes on table
 query <- glue_sql(
     "PRAGMA index_list({table_name})",
@@ -202,6 +202,7 @@ if (!idx_species_year_cell %in% indexes_all$name) {
                "eea_cell_code", 
                "speciesKey",
                "genusKey",
+               "familyKey",
                "coordinateUncertaintyInMeters"),
   .con = sqlite_occ
   )
@@ -209,7 +210,7 @@ if (!idx_species_year_cell %in% indexes_all$name) {
 }
 ```
 
-Group by `year`, `eea_cell_code`, `speciesKey`, `genusKey`, count number of occurrences for each group and get the lowest value of coordinate uncertainty `occurrenceUncertaintyInMeters`:
+Group by `year`, `eea_cell_code`, `speciesKey`, `genusKey`, `familyKey`, count number of occurrences for each group and get the lowest value of coordinate uncertainty `occurrenceUncertaintyInMeters`:
 
 ```{r get_datacube_species}
 query <- glue_sql(
@@ -217,7 +218,8 @@ query <- glue_sql(
   cols = c("year", 
            "eea_cell_code", 
            "speciesKey",
-           "genusKey"),
+           "genusKey",
+           "familyKey"),
   coord_uncertainty = "coordinateUncertaintyInMeters",
   table = table_name,
   .con = sqlite_occ
@@ -231,37 +233,40 @@ occ_cube_species <-
 occ_cube_species <-
   occ_cube_species %>%
   mutate(speciesKey = as.integer(speciesKey),
-         genusKey = as.integer(genusKey)) %>%
-  filter(speciesKey %in% alien_taxa_species_key | 
-           genusKey %in% alien_taxa_species_key)
+         genusKey = as.integer(genusKey),
+         familyKey = as.integer(familyKey)) %>%
+  filter(speciesKey %in% alien_taxa_species_key |
+           genusKey %in% alien_taxa_species_key |
+           familyKey %in% alien_taxa_species_key)
 ```
 
-Remove occurrences at genus level, if present:
+Remove occurrences at genus level or family level, if present:
 
-```{r remove_genus_level_occs}
+```{r remove_genus_family_level_occs}
 occ_cube_species <-
   occ_cube_species %>% 
   filter(!is.na(speciesKey) & speciesKey != 0)
 ```
 
-Number of alien species (or genera) included in the occurrence cube:
+Number of alien species (or genera or families) included in the occurrence cube:
 
 ```{r species_included}
 paste(
   length(alien_taxa_species_key[
   which(alien_taxa_species_key %in% c(unique(occ_cube_species$speciesKey), 
-                                      unique(occ_cube_species$genusKey)))]),
+                                      unique(occ_cube_species$genusKey),
+                                      unique(occ_cube_species$familyKey)))]),
   "out of",
   length(alien_taxa_species_key)
 )
 ```
 
-Drop `genusKey`:
+Drop `genusKey` and `familyKey`:
 
 ```{r drop_genusKey_occ_cube}
 occ_cube_species <-
   occ_cube_species %>%
-  select(-genusKey)
+  select(-c(genusKey, familyKey))
 ```
 
 Preview:
@@ -281,6 +286,7 @@ query <- glue_sql(
   "SELECT DISTINCT {`cols`*} FROM {table}",
   cols = c("speciesKey",
            "genusKey",
+           "familyKey",
            "taxonKey",
            "scientificName"),
   table = table_name,
@@ -292,7 +298,7 @@ occ_cube_species_taxa <-
            genusKey %in% alien_taxa_species_key)
 ```
 
-Drop taxa at genus level:
+Drop taxa at genus or family level:
 
 ```{r drop_taxa_genus_level}
 occ_cube_species_taxa <-
@@ -300,12 +306,12 @@ occ_cube_species_taxa <-
   filter(!is.na(speciesKey) & speciesKey != 0)
 ```
 
-Drop `genusKey`:
+Drop `genusKey` and `familyKey`:
 
 ```{r drop_genusKey_taxa}
 occ_cube_species_taxa <-
   occ_cube_species_taxa %>%
-  select(-genusKey)
+  select(-c(genusKey, familyKey))
 ```
 
 Some species have occurrences coming from multiple taxa:
