Add family and convert to integer
This was done in the cube and should be done also for the taxonomic compendium.

--- a/src/belgium/4_aggregate.Rmd
+++ b/src/belgium/4_aggregate.Rmd
@@ -294,8 +294,12 @@ query <- glue_sql(
 )
 occ_cube_species_taxa <- 
   dbGetQuery(sqlite_occ, query) %>%
-  filter(speciesKey %in% alien_taxa_species_key | 
-           genusKey %in% alien_taxa_species_key)
+  mutate(speciesKey = as.integer(speciesKey),
+         genusKey = as.integer(genusKey),
+         familyKey = as.integer(familyKey)) %>%
+  filter(speciesKey %in% alien_taxa_species_key |
+           genusKey %in% alien_taxa_species_key |
+           familyKey %in% alien_taxa_species_key)
 ```
 
 Drop taxa at genus or family level:
