Add some verification status to discard
Based on 56493fd7e7006279ea36e6e5a478c6a5c9b45ec4

--- a/src/europe/2_assign_grid.Rmd
+++ b/src/europe/2_assign_grid.Rmd
@@ -347,8 +347,11 @@ We won't take into account unverified observations:
 identificationVerificationStatus_to_discard <- c(
   "unverified",
   "unvalidated",
+  "not validated",
+  "under validation",
   "not able to validate",
   "control could not be conclusive due to insufficient knowledge",
+  "uncertain",
   "unconfirmed",
   "unconfirmed - not reviewed",
   "validation requested"
